--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -189,10 +189,10 @@
     display: flex;
     color: white;
     justify-content: space-between;
-    margin-left: 25px;
-    margin-right: 25px;
     margin-bottom: 10px;
     margin-top: 10px;
+    width: 90%;
+    margin-left: 5%;
   }
   .Headline{
   }
