--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -7,30 +7,35 @@
 form {
     color: white;
     width: 12%;
+    max-width: 340px;
     min-width: 240px;
+    border: 2px solid #ccc;
+    border-radius: 16px;
+    padding: 32px;
+    background-color: rgb(53, 54, 58);
   }
 
 .textField {
     width: 100%;
     color: white;
-    background-color:  rgb(35, 36, 40);
     background: rgba(255, 0, 0, 0);
     font-family: "Inter";
     text-decoration: none;
     border: none;
     border-bottom: 1px solid white;
+    font-size: 24px;
 }
 
 .topBar{
-    height: 10%;
+    height: 15%;
 }
 
 .mainContainerLoginRow{
-    background-color: rgb(35, 36, 40);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 75%;
+    height: 70%;
+    width: 100€;
   }
 
 .formContainer{
@@ -49,11 +54,12 @@ form {
 .LoginButton {
     background-color: rgb(90, 101, 234);
     color: white;
-    width: 50%;
-    height: 32px;
+    width: 55%;
+    height: 48px;
     font-family: "Inter";
     font-weight: bolder;
-    border-radius: 4px;
+    font-size: 20px;
+    border-radius: 8px;
     text-decoration: none;
     border: none;
 }
@@ -61,7 +67,7 @@ form {
 .headLine{
     font-family: "Inter";
     font-weight: bolder;
-    font-size: 16px;
+    font-size: 24px;
 
 }
 
@@ -75,11 +81,11 @@ form {
 .LinkForgotPassword{
     color: white;
     font-family: "Inter";
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .inputField {
-    padding-top: 16px;
+    padding-top: 32px;
 }
 
 .loginIcon {
@@ -90,17 +96,5 @@ form {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-bottom: 16px;
-}
-
-.LoginLogo { 
-    color: white;
-    font-family: "Inter";
-    font-size: 32px;
-    font-weight: bolder;
-
-    background-color: rgb(90, 101, 234);
-    color: white;
-    padding: 32px;
-    text-align: center;
+    padding-bottom: 8px;
 }
