--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: Inter;
+  src: url("../../Font/Inter-Regular.ttf");
+  /* Add more variations (bold, italic, etc.) if needed */
+}
+
+.Inter{
+  font-family: Inter;
+}
 .maincontainer{
     background-color: rgb(35, 36, 40);
     padding: 1px;
@@ -27,27 +36,46 @@
   }
   .name{
     margin-right: 10%;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
   }
   
   .findAnswers{
     color: white;
-    font-weight: bolder;
+  
     margin-top: 20px;
     margin-left: 10%;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
   }
   .searchPage{
     color: white;
     margin-left: 10%;
     margin-bottom: 20px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
   }
   .activity{
     color: white;
-    font-weight: bolder;
     margin-left: 10%;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
   }
   .questions_answers{
     color: white;
     margin-left: 10%;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
   }
   .profile{
     display: flex;
@@ -79,9 +107,17 @@
   
   .profileName{
   color: white;
+  font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
   }
   .profileEmail{
     color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
   
   }
   .submitAQuestionContainer{
@@ -91,10 +127,14 @@
   margin-top: 10px;
   margin-right: 10px;
   border-radius: 5px;
+  
   }
   .submitAQuestionHeader{
   color: white;
-  font-weight: bolder;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 30px;
   margin-top: 10px;
   margin-left: 10px;
   
@@ -105,6 +145,10 @@
   }
   .submitAQuestiontitle{
   color: white;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
   }
   .inputQuestionTitle{
     background-color: rgb(53, 54, 58);
@@ -112,6 +156,10 @@
     border: 1px solid white;
     width: 100%;
     border-radius: 2px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
   
   }
   .inputPlaintext{
@@ -121,6 +169,10 @@
     width: 100%;
     border-radius: 2px;
     padding-bottom: 50px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
   }
   
   .dropdown {
@@ -131,6 +183,10 @@
     padding: 5px;
     margin-top: 5px;
     margin-right: 15px;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
   }
   
   .dropdown-content {
@@ -141,6 +197,10 @@
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     z-index: 1;
     margin: -5px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
   }
   
   .dropdown:hover .dropdown-content {
@@ -163,16 +223,27 @@
   }
   
   .submitButton{
-    background-color:  rgb(53, 54, 58);
+    background: #5A65EA;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+border-radius: 5px;
+width: 120px;
     color: white;
-    border: 1px solid white;
+    border: none;
     vertical-align: text-top;
     margin-left: auto;
     margin-top: 5px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    letter-spacing: 0.12em;
   }
   .newQustion{
     color: white;
-    font-weight: bolder;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
       margin-top: 40px;
       margin-left: 10px;
       margin-bottom: 10px;
@@ -195,6 +266,10 @@
     margin-left: 5%;
   }
   .Headline{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+  font-size: 12px;
   }
   .smallUserLogo2{
     background-color: rgb(90, 101, 234);
@@ -205,6 +280,10 @@
     margin-right: 10px;
   }
   .username{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+  font-size: 12px;
   
   }
   .userQ{
@@ -222,6 +301,10 @@
   .newQuestionBodyText{
     color: white;
     margin-left: 5px;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 300;
+font-size: 12px;
   }
   .newQuestionTags{
     color: white;
@@ -238,4 +321,8 @@
   padding-right: 30px;
   padding-top: 2px;
   padding-bottom:2px ;
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
   }
