--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -17,7 +17,7 @@
   .Leftcontainer{
     background-color: rgb(53, 54, 58);
     margin: 10px;
-    width: 20%;
+    width: 25%;
     max-height: 545px;
     border-radius: 5px;
     position: relative;
@@ -113,7 +113,7 @@ font-size: 12px;
     font-weight: 400;
     font-size: 12px;
   }
-  .profileEmail{
+  .profileEmailHomepage{
     color: white;
     font-family: 'Inter';
     font-style: normal;
