--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -21,43 +21,69 @@ margin-right: 10px;
 color: white;
 display: flex;
 align-items: center;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
 }
 .profileUsername{
 margin-left: 10%;
 margin-right: 20px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
 }
 .profileUsernametext{
 border: 1px inset white;
 padding: 2px;
-padding-right: 80px ;
+min-width: 135px;
+max-width: 135px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
 }
 .profileEmail{
     margin-left: 10%;
     margin-right: 30px;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
 }
 .profileEmailText{
 border: 1px inset white;
 padding: 2px;
-padding-right: 80px ;
+min-width: 135px;
+max-width: 135px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
 
 }
 .profilePassword{
     margin-left: 10%;
     margin-right: 30px;
-
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
 }
 .profilePasswordtext{
     margin-right: 20px;
     border: 1px inset white;
     padding: 2px;
-padding-right: 80px ;
+    min-width: 135px;
+    max-width: 135px;
 
 }
 
 
 /*--------ProfileOverview.jsx-----------------*/
 .profileOverviewBox{
-    height: 450px;
+    height: 420px;
     border: 1px solid white;
     border-radius: 5px;
     width: 30%;
@@ -95,9 +121,20 @@ padding-right: 80px ;
   }
  .profileOverviewProfileName{
   color: white;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  margin-top: 10px;
   }
+
   .profileOverviewProfileEmail{
     color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    margin-top: 5px;
   }
 
 .profileOverviewInfo{
@@ -111,7 +148,11 @@ color:white;
 
 }
 .PO_Question{
-    margin-right: 143px;
+    margin-right: 135px;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
 }
 
 .profileOverviewAnswersLine{
@@ -121,7 +162,11 @@ color:white;
     
     }
 .PO_Answers{
-    margin-right: 149px;
+    margin-right: 138px;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
     }
 .profileOverviewPLLine{
 display: flex;
@@ -130,13 +175,17 @@ color:white;
 }
 .PO_PL{
   margin-right: 30px;
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
         }
 /*--------ProfilePL_Overview.jsx-----------------*/
 
 .profilePLBox{
 border: 1px solid white;
 border-radius: 5px;
-height: 450px;
+height: 420px;
 width: 100%;
 margin-top: 10px;
 margin-right: 10px;
@@ -148,25 +197,36 @@ margin-right: 10px;
     margin-left: 15%;
 }
 .profilePLTitle{
-    color: white
+    color: white;
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
 }
 .PLAndSkillLevel{
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 .ProgrammingLanguages{
     color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+
 }
 .Languagesnr{
-    margin-bottom: 10px;
 
 }
 .SkillLevel{
 color:white;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
 }
 .SkillLevelHeader{
-    margin-bottom: 10px;
+
 }
 
 .PLdropdown {
@@ -175,16 +235,17 @@ color:white;
     border: 1px solid white;
     color:white;
     padding: 2px;
-    padding-right: 80px;
     margin-top: 5px;
     margin-right: 15px;
+    min-width: 135px;
+    max-width: 135px;
   }
   
   .PLdropdown-content {
     display: none;
     position: absolute;
     background-color: black;
-    min-width: 160px;
+    min-width: 100%;
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     z-index: 1;
     margin: -5px;
@@ -192,44 +253,10 @@ color:white;
   
   .PLdropdown:hover .PLdropdown-content {
     display: block;
-    margin-top: 2px;
+    margin-top: 3px;
+    margin-left: -2px;
   }
   .PLarrow-down {
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    transform: rotate(45deg);
-    margin-left: 20px;
-    margin-bottom: 3px;
-  }
-  .SkillLvldropdown {
-    position: relative;
-    display: inline-block;
-    border: 1px solid white;
-    color:white;
-    padding: 2px;
-    padding-right: 80px;
-    margin-top: 5px;
-    margin-right: 15px;
-    min-width: 160px;
-  }
-  
-  .SkillLvldropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    min-width: 160px;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    z-index: 1;
-    margin: -5px;
-  }
-  
-  .SkillLvldropdown:hover .SkillLvldropdown-content {
-    display: block;
-    margin-top: 2px;
-  }
-   .Skillarrow-down {
     border: solid white;
     border-width: 0 3px 3px 0;
     display: inline-block;
@@ -238,6 +265,82 @@ color:white;
     margin-left: 80px;
     margin-bottom: 3px;
   }
+  .SkillLvldropdown {
+    position: relative;
+    display: inline-block;
+    border: 1px solid white;
+    color:white;
+    padding: 2px;
+    margin-top: 5px;
+    margin-right: 15px;
+    min-width: 135px;
+    max-width: 135px;
+  }
+  
+  .SkillLvldropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    min-width: 100%;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin: -5px;
+  }
+  
+  .SkillLvldropdown:hover .SkillLvldropdown-content {
+    display: block;
+    margin-top: 3px;
+    margin-left: -2px;
+  }
+   .Skillarrow-down {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(45deg);
+    margin-left: 49px;
+    margin-right: 5px;
+    margin-bottom: 3px;
+    
+  }
+  .discardButton{
+    font-size: smaller;
+    padding-left: 2px;
+    padding-top: 0px;
+    padding-bottom: -1px;
+    padding-right: 2px;
+    vertical-align: text-bottom;
+    margin-left: 75px;
+  }
+  .addNewLanguages{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .addNewLanguagesButton {
+    margin-top: 50px;
+    display: inline-block;
+    text-align: center;
+    line-height: 35px; /* Set the same value as the height to center vertically */
+    background-color: rgb(90, 101, 234);
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 3.5em;
+    font-weight: 100;
+    color: #fff;
+    cursor: pointer;
+  }
+  .addNewLanguagesText{
+color: white;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+margin-top: 10px;
+  }
+ 
 /*-------------------------*/
 .profileOverviewDisplay{
         display: flex;
