--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -8,7 +8,7 @@
 
 /*--------ProfileHeaderBox.jsx-----------------*/
 .userInfoBox {
-    border: 1px solid white;
+    background-color: rgb(72, 73, 78);
     border-radius: 5px;
     height: 100px;
     display: flex;
@@ -39,13 +39,15 @@
 
 .profileUsernametext {
     border: 1px inset white;
-    padding: 2px;
+    background-color: black;
+    padding: 3px;
+    padding-left: 5px;
     min-width: 135px;
     max-width: 135px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
 }
 
 .profileEmail {
@@ -58,14 +60,16 @@
 }
 
 .profileEmailText {
+    background-color: black;
     border: 1px inset white;
-    padding: 2px;
+    padding: 3px;
+    padding-left: 5px;
     min-width: 135px;
     max-width: 135px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
 
 }
 
@@ -79,19 +83,25 @@
 }
 
 .profilePasswordtext {
+    background-color: black;
     margin-right: 20px;
     border: 1px inset white;
-    padding: 2px;
+    padding: 3px;
+    padding-left: 5px;
+    padding-top: 4px;
     min-width: 135px;
     max-width: 135px;
-
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
 }
 
 
 /*--------ProfileOverview.jsx-----------------*/
 .profileOverviewBox {
+    background-color: rgb(81, 83, 89);
     min-height: 420px;
-    border: 1px solid white;
     border-radius: 5px;
     width: 30%;
     display: flex;
@@ -111,7 +121,7 @@
 }
 
 .profileOverviewUserLogo {
-    background-color: none;
+    background-color: rgb(90, 101, 234);
     border: 2px solid white;
     width: 50px;
     height: 50px;
@@ -120,16 +130,23 @@
 }
 
 .profileOverviewSmallUserLogo {
-    background-color: white;
-    border: 2px solid rgb(35, 36, 40);
-    width: 10px;
-    height: 10px;
+    background-color: rgb(192, 67, 67);
+    width: 15px;
+    height: 15px;
     border-radius: 100px;
     position: absolute;
-    bottom: 0;
-    right: 0;
+    top: -2px;
+    right: -4px;
 }
-
+.PL_NewMessages{
+    color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 8px;
+    margin-top: 2px;
+    text-align: center;
+}
 .profileOverviewProfileName {
     color: white;
     font-family: 'Inter';
@@ -197,10 +214,22 @@
     font-size: 14px;
 }
 
+.profileOverviewNewMessagesLine{
+    display: flex;
+    margin-top: 10px;
+    color: white;
+}
+.PO_NewMes{
+    margin-right: 93px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+}
 /*--------ProfilePL_Overview.jsx-----------------*/
 
 .profilePLBox {
-    border: 1px solid white;
+    background-color: rgb(115, 116, 120);
     border-radius: 5px;
     min-height: 420px;
     width: 100%;
