--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -7,10 +7,21 @@
 
 
 /*--------ProfileHeaderBox.jsx-----------------*/
+.profileHeaderText{
+    color: white;
+    display: flex;
+    align-items: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 1000;
+    font-size: 36px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
 .userInfoBox {
     background-color: rgb(72, 73, 78);
     border-radius: 5px;
-    height: 100px;
+    height: 70px;
     display: flex;
     margin-top: 10px;
     margin-left: 10px;
@@ -25,7 +36,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 1px;
 }
 
 .profileUsername {
@@ -34,7 +45,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .profileUsernametext {
@@ -56,7 +67,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .profileEmailText {
@@ -79,7 +90,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .profilePasswordtext {
@@ -152,7 +163,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     margin-top: 10px;
 }
 
@@ -161,7 +172,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     margin-top: 5px;
 }
 
@@ -174,57 +185,57 @@
     display: flex;
     margin-top: 160px;
     color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
 
 }
 
 .PO_Question {
     margin-right: 135px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
 }
 
 .profileOverviewAnswersLine {
     display: flex;
     margin-top: 10px;
     color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
 
 }
 
 .PO_Answers {
     margin-right: 138px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
 }
 
 .profileOverviewPLLine {
     display: flex;
     margin-top: 10px;
     color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
 }
 
 .PO_PL {
     margin-right: 30px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
 }
 
 .profileOverviewNewMessagesLine{
     display: flex;
     margin-top: 10px;
     color: white;
-}
-.PO_NewMes{
-    margin-right: 93px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
+}
+.PO_NewMes{
+    margin-right: 94px;
 }
 /*--------ProfilePL_Overview.jsx-----------------*/
 
@@ -246,9 +257,10 @@
 
 .profilePLTitle {
     color: white;
+    font-family: 'Inter';
     font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
+    font-weight: 800;
+    font-size: 36px;
 }
 
 .PLAndSkillLevel {
@@ -277,6 +289,21 @@
 }
 
 .SkillLevelHeader {}
+.PL{
+    position: relative;
+       display: inline-block;
+       border: 1px solid white;
+       padding: 3px;
+       padding-left: 5px;
+       min-width: 135px;
+       max-width: 135px;
+       font-family: 'Inter';
+       font-style: normal;
+       font-weight: 400;
+       font-size: 10px;
+    margin-top: 5px;
+       margin-right: 15px;
+   }
 .PLdropdown {
     position: relative;
     display: inline-block;
@@ -287,6 +314,10 @@
     margin-right: 15px;
     min-width: 135px;
     max-width: 135px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
 }
 
 .PLdropdown-content {
@@ -316,7 +347,21 @@
     right: 12px; 
 }
 
-
+.SkillLvl {
+   position: relative;
+ display: inline-block;
+    border: 1px solid white;
+    padding: 3px;
+    padding-left: 5px;
+    min-width: 135px;
+    max-width: 135px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+margin-top: 5px;
+    margin-right: 15px;
+}
 .SkillLvldropdown {
     position: relative;
     display: inline-block;
@@ -327,6 +372,10 @@
     margin-right: 15px;
     min-width: 135px;
     max-width: 135px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
 }
 
 .SkillLvldropdown-content {
