--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -26,6 +26,7 @@
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
+    
 
 }
 
@@ -37,15 +38,18 @@
     font-style: normal;
     font-weight: 400;
     font-size: 1px;
+    width: 100%;
+    justify-content: space-around;
 }
 
 .profileUsername {
-    margin-left: 10%;
-    margin-right: 20px;
+
+    margin-right: 30px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
+    padding-top: 3px;
 }
 
 .profileUsernametext {
@@ -62,12 +66,13 @@
 }
 
 .profileEmail {
-    margin-left: 10%;
+
     margin-right: 30px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
+    padding-top: 3px;
 }
 
 .profileEmailText {
@@ -85,12 +90,13 @@
 }
 
 .profilePassword {
-    margin-left: 10%;
+
     margin-right: 30px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
+    padding-top: 3px;
 }
 
 .profilePasswordtext {
@@ -112,7 +118,7 @@
 /*--------ProfileOverview.jsx-----------------*/
 .profileOverviewBox {
     background-color: rgb(81, 83, 89);
-    min-height: 420px;
+    min-height: 560px;
     border-radius: 5px;
     width: 30%;
     display: flex;
@@ -189,7 +195,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
-
+    cursor: pointer;
 }
 
 .PO_Question {
@@ -204,6 +210,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
+    cursor: pointer;
 
 }
 
@@ -219,6 +226,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
+    cursor: pointer;
 }
 
 .PO_PL {
@@ -233,6 +241,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
+    cursor: pointer;
 }
 .PO_NewMes{
     margin-right: 100px;
@@ -240,7 +249,7 @@
 /*--------ProfilePL_Overview.jsx-----------------*/
 
 .profilePLBox {
-    background-color: rgb(115, 116, 120);
+    background-color: rgb(43, 44, 48);
     border-radius: 5px;
     min-height: 420px;
     width: 100%;
@@ -309,7 +318,6 @@
     display: inline-block;
     border: 1px solid white;
     color: white;
-    padding: 2px;
     margin-top: 5px;
     margin-right: 15px;
     min-width: 135px;
@@ -318,6 +326,8 @@
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
+    padding: 3px;
+    padding-left: 5px;
 }
 
 .PLdropdown-content {
@@ -333,7 +343,7 @@
 .PLdropdown:hover .PLdropdown-content {
     display: block;
     margin-top: 3px;
-    margin-left: -2px;
+    margin-left: -5px;
 }
 
 .PLarrow-down {
@@ -367,7 +377,8 @@ margin-top: 5px;
     display: inline-block;
     border: 1px solid white;
     color: white;
-    padding: 2px;
+    padding: 3px;
+    padding-left: 5px;
     margin-top: 5px;
     margin-right: 15px;
     min-width: 135px;
@@ -390,8 +401,8 @@ margin-top: 5px;
 
 .SkillLvldropdown:hover .SkillLvldropdown-content {
     display: block;
-    margin-top: 3px;
-    margin-left: -2px;
+    margin-top: 4px;
+    margin-left: -5px;
 }
 
 .Skillarrow-down {
@@ -475,6 +486,7 @@ margin-top: 5px;
     font-weight: 400;
     font-size: 16px;
     margin-top: 10px;
+    margin-bottom: 50px;
 }
 
 /*-------------------------*/
@@ -586,5 +598,14 @@ margin-top: 20px;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
+  }
+  
+  .clicked {
+    background: rgb(85, 88, 125);
+    border-radius: 5px;
+    margin-left: -6px;
+    margin-right: -6px;
+    font-weight: bold;
+    padding: 6px;
   }
   
