--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+.app-container {
+  display: flex;
+  background-color: rgb(35, 36, 40);
+}
+
 
 .App-logo {
   height: 40vmin;
