--- a/src/Pages/Login/Login2.css
+++ b/src/Pages/Login/Login2.css
@@ -1,55 +1,48 @@
-.mainContainerLogin {
+/*.mainContainerLogin2 {
     background-color: rgb(53, 54, 58);
     flex-direction: column;
-    height: 110vh;
-    width: 100%;
-    margin-left: -21.5%;
-    z-index: 1;
+    height: 100vh;
 }
 
 form {
     color: white;
-    width: 20%;
+    width: 25%;
     border-radius: 16px;
     padding: 30px 50px 30px 50px;
-    background-color: rgb(81, 81, 85);
+    background-color: rgb(53, 54, 58);
     border: 2px solid #ccc;
-    box-shadow: 0px 0px 60px 30px rgba(0,0,0,1.2);
 }
 
-
-.textField {
+.textField2 {
     width: 100%;
     color: white;
-    background: rgba(255, 0, 0, 0);
+    background: rgb(31, 31, 31);
     font-family: "Inter";
     text-decoration: none;
-    border: none;
-    border-bottom: 1px solid white;
-    font-size: 12px;
-
-
+    border: 1px solid white;
+    border-radius: 2px;
+    font-size: 14px;
 }
 
 
-.formContainer {
+.formContainer2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: 40px;
 }
 
-.Login {
+.Login2 {
     display: flex;
     flex-direction: column;
     padding-top: 20px;
     align-items: center
 }
 
-.LoginButton {
+.LoginButton2 {
     background-color: rgb(90, 101, 234);
     color: white;
-    width: 55%;
+    width: 40%;
     height: 48px;
     font-family: "Inter";
     font-weight: bolder;
@@ -59,43 +52,42 @@ form {
     border: none;
 }
 
-.headLine {
+.headLine2 {
     font-family: "Inter";
-    font-weight: bolder;
-    font-size: 16px;
+    font-size: 14px;
     padding-bottom: 2px;
 
 }
 
-.LinkForgotPasswordDiv {
+.LinkForgotPasswordDiv2 {
     display: flex;
     flex-direction: row;
     justify-content: right;
     padding-top: 4px;
 }
 
-.LinkForgotPassword {
+.LinkForgotPassword2 {
     color: white;
     font-family: "Inter";
     font-size: 12px;
 }
 
-.inputField {
+.inputField2 {
     padding-top: 16px;
 }
 
-.loginIcon {
-    width: 30%;
+.loginIcon2 {
+    width: 35%;
 }
 
-.loginIconDiv {
+.loginIconDiv2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding-bottom: 8px;
 }
 
-.LogoLogin {
+.LogoLogin2 {
     width: 15%;
     padding: 1%;
-}
+}*/
